--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.4.4",
+    "apollo-server-lambda": "^2.9.5",
     "axios": "^0.19.0",
+    "graphql": "^14.5.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "run-p build:**",
-    "build:app": "react-scripts build",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
+    "start": "react-scripts start",
+    "build:app": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
